# notred

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy.yml  fmt-clippy.yml  test.yml
docs/: IPC.md  PLAN.md
examples/: config.toml  notred-tui.toml  notred.service  tui.toml
examples/apps/some_app/: config.toml
examples/apps/some_app/urgency/critical/: config.toml
examples/apps/some_app/urgency/low/: config.toml
examples/ipc-examples/: activate.jsonl  input.jsonl  list.jsonl  list_history.jsonl  pause.jsonl  reload.jsonl  remove.jsonl  subscribe.jsonl
examples/urgency/critical/: config.toml
examples/urgency/low/: config.toml
libnotred/: Cargo.toml
libnotred/src/: lib.rs
libnotred/src/dbus/: mod.rs
libnotred/src/dbus/notifications/: mod.rs  tests.rs
libnotred/src/events/: mod.rs  tests.rs
libnotred/src/history/: mod.rs  tests.rs
libnotred/src/host/: mod.rs  state.rs  tests.rs
libnotred/src/host/state/: mod.rs  tests.rs
libnotred/src/ipc/: client.rs  codec.rs  error.rs  mod.rs  server.rs  tests.rs
libnotred/src/ipc/client/: mod.rs
libnotred/src/ipc/codec/: mod.rs  tests.rs
libnotred/src/ipc/error/: mod.rs  tests.rs
libnotred/src/ipc/server/: mod.rs  tests.rs
libnotred/src/model/: mod.rs  tests.rs
libnotred/src/queue/: mod.rs  tests.rs
libnotred/src/spawn/: mod.rs  tests.rs
libnotred/src/timeouts/: mod.rs  tests.rs
libnotred/src/wire/: mod.rs  tests.rs
notred/: Cargo.toml
notred-tui/: Cargo.toml
notred-tui/src/: main.rs
notred-tui/src/app/: mod.rs  run.rs  tests.rs
notred-tui/src/cli/: mod.rs  tests.rs
notred-tui/src/config/: mod.rs  tests.rs
notred-tui/src/ctl/: mod.rs  tests.rs
notred-tui/src/logger/: mod.rs
notred-tui/src/model/: mod.rs  tests.rs
notred-tui/src/settings/: mod.rs  tests.rs
notred-tui/src/ui/: actions_panel.rs  detail.rs  footer.rs  header.rs  list_panel.rs  mod.rs  tests.rs  util.rs
notred/src/: error.rs  main.rs  ping.rs
notred/src/app/: mod.rs
notred/src/app/daemon/: mod.rs
notred/src/cli/: mod.rs  tests.rs
notred/src/commands/ping/: mod.rs
notred/src/config/: events.rs  mod.rs  overrides.rs  tests.rs
notred/src/config/events/: tests.rs
notred/src/config/overrides/: tests.rs
notred/src/daemon/: mod.rs
notred/src/error/: mod.rs  tests.rs
notred/src/settings/: mod.rs  tests.rs
notred/tests/: smoke.rs
notredctl/: Cargo.toml
notredctl/src/: error.rs  main.rs
notredctl/src/app/: mod.rs  tests.rs
notredctl/src/cli/: mod.rs  tests.rs
notredctl/src/settings/: mod.rs  tests.rs
notredctl/tests/: smoke.rs
