[package]
name = "libnotred"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "notred daemon library: notification IPC wire + Unix socket server."
keywords.workspace = true
readme = "../README.md"

[features]
default = ["ipc"]
ipc = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
