[package]
name = "notred-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal notification manager for notred (notredctl client)."
keywords.workspace = true

[[bin]]
name = "notred-tui"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
ratatui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
