[package]
name = "notred"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Notification daemon and CLI (IPC server)."
keywords.workspace = true

[[bin]]
name = "notred"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
libnotred = { path = "../libnotred", default-features = false, features = ["ipc"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
